syntax = "proto3";

import "google/protobuf/empty.proto";

package spreadsheet;

message Cell {
  string id = 1;
  string value = 2;
  Location location = 3;
  bool locked = 4;
  string error = 5; // Add error field
  repeated Collaborator collaborators = 6;
}

message Collaborator {
  string id = 1;
  string name = 2;
}

message Location {
  int32 row = 1;
  int32 column = 2;
}

service Spreadsheet {
  rpc AddCell(Cell) returns (google.protobuf.Empty) {}
  rpc UpdateCell(Cell) returns (google.protobuf.Empty) {}
  rpc GetCells(google.protobuf.Empty) returns (stream Cell) {}
  rpc UpdateCellStream(stream Cell) returns (stream Cell) {}
  rpc realtimeCollaboration(stream Collaborator) returns (stream Cell) {}
}
